CF: Fix a word-wrap on the actiondeck page's h1

--- a/sites/all/themes/springboard/css/style.css
+++ b/sites/all/themes/springboard/css/style.css
@@ -10198,8 +10198,8 @@ h3.poll {
   border-top-color: #158f7a;
 }
 .view-display-id-block_12 .create-vision-board a.subpage-link .subpage-link-box .subpage-link-title {
-  padding: 0;
-  margin: 0 0 8px 0;
+  padding: 0px;
+  margin: 0px 0px 8px 0px;
   font-family: "Roboto Condensed", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 20px;
   line-height: 24px;
@@ -10208,8 +10208,8 @@ h3.poll {
   text-decoration: none;
 }
 .view-display-id-block_12 .create-vision-board a.subpage-link .subpage-link-box p {
-  padding: 0;
-  margin: 0;
+  padding: 0px;
+  margin: 0px;
   font-family: "Roboto Condensed", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 16px;
   font-weight: 300;
@@ -10230,10 +10230,7 @@ h3.poll {
   .view-display-id-block_12 .create-vision-board {
     padding-left: 15px;
     padding-right: 15px;
-    margin-left: 0;
-  }
-  .view-display-id-block_12 .create-vision-board .subpage-link-box:nth-child(1) {
-    padding: 0;
+    margin-left: 0px;
   }
 }
 #boxes-box-take_our_quiz_box .col-sm-12 {
@@ -10254,10 +10251,7 @@ h3.poll {
     padding-right: 15px;
   }
   #boxes-box-take_our_quiz_box .subpage-link-box {
-    height: 250px;
-  }
-  #boxes-box-take_our_quiz_box .subpage-link-box :nth-child(2) {
-    padding: 0;
+    height: 220px;
   }
 }
 @media only screen and (min-width: 768px) {
@@ -11162,7 +11156,7 @@ ul.card-lists > li a {
   background-color: #002b41;
 }
 .page-springboard-actiondeck h1 {
-  word-break: break-all;
+  word-wrap: break-word;
 }
 #custom-deck-link-div #custom-deck-link {
   width: 400px;
