--- a/sites/all/themes/springboard/less/_deck.less
+++ b/sites/all/themes/springboard/less/_deck.less
@@ -75,7 +75,7 @@
 }
 
 .page-springboard-actiondeck h1 {
-	word-break:break-all;
+	word-wrap:break-word;
 }
 
 #custom-deck-link-div #custom-deck-link {
